@@ -8,7 +8,7 @@ libgslrng_a_SOURCES = gsl_rng.h rng.c default.c \
 cmrg.c cmlib.c minstd.c mrg.c mt.c r250.c ran0.c \
 ran1.c ran2.c ran3.c rand.c random.c rand48.c randu.c \
 ranf.c ranlux.c ranmar.c \
-taus.c tds.c tt.c uni.c uni32.c vax.c zuf.c
+taus.c transputer.c tt.c uni.c uni32.c vax.c zuf.c
 
 test_SOURCES = test.c
 test_LDADD = libgslrng.a ../err/libgslerr.a ../err/libgsltest.a
