@@ -43,9 +43,9 @@ extern const gsl_rng_type *gsl_rng_ran2;
 extern const gsl_rng_type *gsl_rng_ran3;
 extern const gsl_rng_type *gsl_rng_rand48;
 extern const gsl_rng_type *gsl_rng_rand;
-extern const gsl_rng_type *gsl_rng_random0_bsd;
-extern const gsl_rng_type *gsl_rng_random0_glibc2;
-extern const gsl_rng_type *gsl_rng_random0_libc5;
+extern const gsl_rng_type *gsl_rng_random8_bsd;
+extern const gsl_rng_type *gsl_rng_random8_glibc2;
+extern const gsl_rng_type *gsl_rng_random8_libc5;
 extern const gsl_rng_type *gsl_rng_random128_bsd;
 extern const gsl_rng_type *gsl_rng_random128_glibc2;
 extern const gsl_rng_type *gsl_rng_random128_libc5;
@@ -67,7 +67,7 @@ extern const gsl_rng_type *gsl_rng_ranlux389;
 extern const gsl_rng_type *gsl_rng_ranlux;
 extern const gsl_rng_type *gsl_rng_ranmar;
 extern const gsl_rng_type *gsl_rng_taus;
-extern const gsl_rng_type *gsl_rng_tds;
+extern const gsl_rng_type *gsl_rng_transputer;
 extern const gsl_rng_type *gsl_rng_tt800;
 extern const gsl_rng_type *gsl_rng_uni32;
 extern const gsl_rng_type *gsl_rng_uni;
